<resources>
    <string name="app_name" translatable="false">Maraei Al shamalia</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="see_more">see more</string>
    <string name="start_from">begin from</string>
    <string name="product_name">product name</string>
    <string name="next">next</string>
    <string name="skip">skip</string>
    <string name="register">register</string>
    <string name="as_guest">as a guest</string>
    <string name="new_register">new register</string>
    <string name="user_name">user name</string>
    <string name="email">email</string>
    <string name="phone_number">phone munber</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="I_agree">I agree</string>
    <string name="terms">Terms</string>
    <string name="sign_in">sign in</string>
    <string name="have_account">already have an account ?</string>
    <string name="email_phone">email or phone</string>
    <string name="forget_password">forget password</string>
    <string name="not_have_account">have not an account ?</string>
    <string name="enter_phone_number">enter your phone number</string>
    <string name="restore_password">restore password</string>
    <string name="enter_code">enter code here</string>
    <string name="did_not_receive_message">didn\'t receive a message?</string>
    <string name="send_code">send code</string>
    <string name="new_passsword">new password</string>
    <string name="confirm">confirm</string>
    <string name="phone_activation">phone activation</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="checkout">checkout</string>
    <string name="price">price</string>
    <string name="quantity">quantity</string>
    <string name="add_favourite">add to favourite</string>
    <string name="delete">delete</string>
    <string name="order_number">order number</string>
    <string name="num_of_product">No. Product</string>
    <string name="order_date">order date :</string>
    <string name="pay_method">pay method :</string>
    <string name="total">Total :</string>
    <string name="products">products</string>
    <string name="size">size</string>
    <string name="delivered">delivered</string>
    <string name="on_proccess">on proccess</string>
    <string name="received">order received</string>
    <string name="rate_product">rate product</string>
    <string name="notification">notification</string>
    <string name="test_notify">This text is an example of text that can be replaced in the same space</string>
    <string name="profile_name">profile name</string>
    <string name="profile">Profile</string>
    <string name="name">name</string>
    <string name="change_password">change password</string>
    <string name="save_changes">save changes</string>
    <string name="old_password">old password</string>
    <string name="ask">Asks</string>
    <string name="favourite">Favourites</string>
    <string name="details">show details</string>
    <string name="offer">Offers</string>
    <string name="wallet">Wallet</string>
    <string name="balance">Balance</string>
    <string name="rs">r.s</string>
    <string name="charging">charging</string>
    <string name="charging_wallet">Recharge wallet</string>
    <string name="bank_account_number">Bank account number</string>
    <string name="owner_name">owner name</string>
    <string name="bank_name">bank name</string>
    <string name="account_number">account number</string>
    <string name="transfer_image">transfer image</string>
    <string name="complaints_and_suggestions">Complaints and suggestions</string>
    <string name="message">write your message</string>
    <string name="send">send</string>
    <string name="contact_us">Or contact us on</string>
    <string name="about">About</string>
    <string name="sadaqah">sadaqah</string>
    <string name="normal">normal</string>
    <string name="method_of_receipt">method of receipt</string>
    <string name="slaughtered">slaughtered</string>
    <string name="alive">alive</string>
    <string name="slaughter_method">slaughter method</string>
    <string name="encapsulation_method">encapsulation method</string>
    <string name="head_type">head type</string>
    <string name="minced_meat_in_kilo">minced meat in kilo</string>
    <string name="notes">notes</string>
    <string name="add_to_cart">add to cart</string>
    <string name="arrange_products">Arrange products</string>
    <string name="from_lowest_to_highest">From lowest to highest</string>
    <string name="from_highest_to_lowest">From highest to lowest</string>
    <string name="online_payment">Online payment</string>
    <string name="bank_transfer">Bank transfer</string>
    <string name="cash_payment">Cash payment</string>
    <string name="language">Language</string>
    <string name="pay">payment</string>
    <string name="date_address">date and address</string>
    <string name="received_date">Received date</string>
    <string name="received_time">Received time</string>
    <string name="delivery_information">Delivery information</string>
    <string name="city">City</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="location_on_map">Location on map</string>
    <string name="purchase">Purchase</string>
    <string name="shipping_fee">Shipping fee</string>
    <string name="discount_code">Discount code</string>
    <string name="activate">Activate</string>
    <string name="change_payment_method">Change method</string>
    <string name="current">Current</string>
    <string name="finished">Finished</string>
    <string name="ad_space">Ad space</string>
</resources>