<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginVertical="5dp"
    android:elevation="10dp"
    android:id="@+id/open_order"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        >

        <TextView
            android:id="@+id/order_num"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/order_number"
            android:textSize="18sp"
            android:textColor="@color/gray"
            />

        <TextView
            android:id="@+id/total_price"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/price"
            android:textSize="18sp"
            android:textColor="@color/gray"
            />

        <TextView
            android:id="@+id/count_product"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/num_of_product"
            android:textSize="18sp"
            android:textColor="@color/gray"
            />

    </LinearLayout>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:src="@mipmap/logowhite"
        android:scaleType="fitXY"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        />

</LinearLayout>