<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:elevation="6dp"
    android:layout_marginVertical="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_margin="5dp"
                />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:id="@+id/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:elevation="6dp"
            >

            <ImageView
                android:id="@+id/image"
                android:layout_width="130dp"
                android:layout_height="100dp"
                android:src="@mipmap/productimage"
                android:scaleType="fitXY"
                />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.cardview.widget.CardView>