<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/pink"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/linear_shape3"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            >

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:src="@mipmap/backarrow_en"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/purchase"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="22sp"
                android:textColor="@color/white"
                />

            <ImageView
                android:id="@+id/notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:src="@mipmap/notifipop"
                />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/levelii"
            android:scaleType="centerCrop"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_marginStart="10dp"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_marginStart="40dp"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                >

                <TextView
                    android:id="@+id/total_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="5dp"
                    />

                <TextView
                    android:id="@+id/delivery_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shipping_fee"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="5dp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:alpha=".3"
                    android:layout_marginVertical="10dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/products_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    tools:listitem="@layout/order_details_item"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:background="@drawable/un_selected_button"
            android:backgroundTint="#403D3D"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            />

    </LinearLayout>

</ScrollView>