<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="50dp"
    android:id="@+id/bottom_container"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arrange_products"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="15dp"
            />

        <TextView
            android:id="@+id/asc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:background="@drawable/un_selected_button"
            android:text="@string/from_lowest_to_highest"
            android:drawableStart="@mipmap/sort"
            android:drawablePadding="15dp"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            />

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:background="@drawable/un_selected_button"
            android:text="@string/from_highest_to_lowest"
            android:drawableStart="@mipmap/sort"
            android:drawablePadding="15dp"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>