<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/linear_shape3"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            >

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:src="@mipmap/backarrow_en"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/charging_wallet"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="22sp"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/gray"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank_account_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5645646541231323"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/owner_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp"
            android:textColor="@color/gray"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            />

        <EditText
            android:id="@+id/owner_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_field"
            android:paddingVertical="10dp"
            android:paddingHorizontal="15dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/owner_name"
            android:inputType="text"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp"
            android:textColor="@color/gray"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            />

        <EditText
            android:id="@+id/bank_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_field"
            android:paddingVertical="10dp"
            android:paddingHorizontal="15dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/bank_name"
            android:inputType="text"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp"
            android:textColor="@color/gray"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            />

        <EditText
            android:id="@+id/account_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_field"
            android:paddingVertical="10dp"
            android:paddingHorizontal="15dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/account_number"
            android:inputType="number"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transfer_image"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp"
            android:textColor="@color/gray"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_field"
            android:paddingVertical="10dp"
            android:paddingHorizontal="15dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/transfer_image"
            android:inputType="text"
            android:drawableEnd="@mipmap/camera"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:elevation="6dp"
            android:background="@drawable/un_selected_button"
            android:backgroundTint="#403D3D"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            />

    </LinearLayout>

</LinearLayout>