<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="15dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                android:elevation="6dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                >

                <ImageView
                    android:id="@+id/favourite_image"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@mipmap/productimage"
                    />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_margin="10dp"
                >

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_margin="5dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp"
                    >

                    <RatingBar
                        android:id="@+id/rate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:numStars="5"
                        android:rating="4"
                        android:progressTint="#FFC107"
                        />

                    <TextView
                        android:id="@+id/avg_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(4)"
                        android:layout_marginHorizontal="5dp"
                        />

                </LinearLayout>

                <TextView
                    android:id="@+id/min_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_from"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:paddingVertical="10dp"
                android:paddingEnd="15dp"
                android:drawableStart="@mipmap/rules"
                android:text="@string/details"
                android:textAlignment="textStart"
                android:drawablePadding="15dp"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginHorizontal="30dp"
                android:drawableStart="@mipmap/delete"
                android:drawablePadding="15dp"
                android:text="@string/delete"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>